<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="matrix"
            android:src="@drawable/background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:paddingEnd="@dimen/di_20_dp"
            android:paddingStart="@dimen/di_20_dp"
            android:paddingTop="@dimen/di_10_dp"
            android:paddingBottom="@dimen/di_15_dp"
            >



            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/signin_icon"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_hello"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorMainTow"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"

           />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/hint_sign_in"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="14sp"

               />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mSignInPhoneLay"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:visibility="gone"
                 >


                <EditText
                    android:id="@+id/mSignInPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="right|center"
                    android:hint="@string/hint_ed_phone"
                    android:inputType="phone"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorEditTextHint"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/mSignInCCP"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="0dp"
                    android:background="@color/colorViewBk"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/mSignInCCP"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.hbb20.CountryCodePicker
                    android:id="@+id/mSignInCCP"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layoutDirection="ltr"
                    app:ccp_autoFormatNumber="false"
                    app:ccp_contentColor="#000"
                    app:ccp_countryPreference="SD"
                    app:ccp_defaultLanguage="ARABIC"
                    app:ccp_defaultPhoneCode="971"
                    app:ccp_showArrow="false"
                    app:ccp_showFlag="true"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="false"
                    app:ccp_textGravity="CENTER"
                    app:ccp_textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <EditText
                android:id="@+id/mSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_style"
                android:gravity="right|center"
                android:hint="@string/hint_ed_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorEditTextHint"
                android:textSize="16sp"
                android:visibility="gone"
          />


            <TextView
                android:id="@+id/mForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/hint_forget_password"
                android:textColor="@color/colorMainThree"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:visibility="gone"

                />


            <Button
                android:id="@+id/mSignInBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_red_style"
                android:gravity="center"
                android:text="@string/hint_btn_sign_in"
                android:textSize="16sp"
                android:textColor="@color/white"
               />


            <Button
                android:id="@+id/mSignInFbBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_blue_style"
                android:gravity="center"
               android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_facebook"
                android:text="@string/hint_sign_up_fb"
                android:textColor="@color/white"
                />



            <Button
                android:id="@+id/mSignUpBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_signup_style"
                android:gravity="center"
                android:text="@string/hint_sign_up"
                android:textSize="16sp"
                android:textColor="@color/colorMainTow"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/hint_delivery_food"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:layout_gravity="center"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hint_btn_delivery_food"
                android:textColor="@color/colorMainThree"
                android:textSize="18sp"
                android:layout_gravity="center"
                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>